# routers/banners_router.go
@@ -7,8 +7,6 @@ import (
 func (router RouterGroup) ImagesRouter() {
 	app := api.ApiGroupApp.BannerApi
 
-	qiniu := api.ApiGroupApp.QiNiuApi
-
 	// 获取 banner 图片列表
 	router.GET("banner/list", app.BannersListView)
 
@@ -20,9 +18,6 @@ func (router RouterGroup) ImagesRouter() {
 
 	// 编辑图片
 	router.POST("banner/edit", app.BannersEditView)
-
-	// 获取七牛云 token
-	router.GET("token/qiniu", qiniu.GetQiNiuToken)
 
 	// 上传图片 - 七牛云地址
 	router.POST("banner/upload/url", app.BannersUploadQiNiuView)
